  The `Focus` and `Unfocus` commands are now deprecated.

Vernacular Commands

- Printing All is no longer an option as such; instead, the command
  Set Printing All sets or unsets other Printing options to remove high-level
  printing features. The new command Set Printing Sugared exactly reverses
  those options, providing high-level printing features. Unset Printing All
  is deprecated, and has no effect.
- The command Set Printing Defaults restores the default printing options.
- The command Set Printing Universes no longer affects the printing
  of universe inconsistency explanations. Instead, there is a new command
  Set Printing Universe Explanations.
- Proofs ending in "Qed exporting ident, .., ident" are not supported
  anymore. Constants generated during `abstract` are kept private to the
  local environment.
- The deprecated Coercion Local, Open Local Scope, Notation Local syntax
  was removed. Use Local as a prefix instead.
- For the Extraction Language command, "OCaml" is spelled correctly.
  The older "Ocaml" is still accepted, but deprecated.
- Using “Require” inside a section is deprecated.
- An experimental command "Show Extraction" allows to extract the content
  of the current ongoing proof (grant wish #4129).
- Coercion now accepts the type of its argument to be "Prop" or "Type".
- The "Export" modifier can now be used when setting and unsetting options, and
  will result in performing the same change when the module corresponding the
  command is imported.

Universes

- Qualified naming of global universes now works like other namespaced
  objects (e.g. constants), with a separate namespace, inside and across
  module and library boundaries. Global universe names introduced in an
  inductive / constant / Let declaration get qualified with the name of
  the declaration.
- Universe cumulativity for inductive types is now specified as a
  variance for each polymorphic universe. See the reference manual for
  more information.