@@ -2021,6 +2021,13 @@ same effect as running:
 \end{itemize}
 The command
 \begin{quote}
+{\tt Unset Printing All.}
+\end{quote}
+restores the printing options in effect at the time of the most recent {\tt Set Printing All}.
+Once such options have been restored, running the command again has no effect.
+
+The command
+\begin{quote}
 {\tt Set Printing Sugared.}
 \end{quote}
 exactly reverses the effect of {\tt Set Printing All}, enabling all high-level
