@@ -70,7 +70,8 @@ Vernacular Commands
   Set Printing All sets or unsets other Printing options to remove high-level
   printing features. The new command Set Printing Sugared exactly reverses
   those options, providing high-level printing features. Unset Printing All
-  is deprecated, and has no effect.
+  restores the printing options in effect at the time of the last Set
+  Printing All.
 - The command Set Printing Defaults restores the default printing options.
 - The command Set Printing Universes no longer affects the printing
   of universe inconsistency explanations. Instead, there is a new command
